--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,6 @@
-plugins:
-  - jekyll-paginate
 paginate: 5
-paginate_path: "/blog/page/:num/"
-permalink: /blog/:year/:month/:day/:title/
+paginate_path: "/blog/pages/:num/"
+permalink: /blog/posts/:year/:month/:day/:title/
 defaults:
   - scope:
       path: ""
