Updated posts layout

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,5 +4,10 @@ permalink: /blog/posts/:year/:month/:day/:title/
 defaults:
   - scope:
       path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
     values:
       layout: "default"
